[gd_scene load_steps=8 format=3 uid="uid://c6idn4aqfv4y2"]

[ext_resource type="Script" path="res://levels/option.gd" id="1_aejjl"]
[ext_resource type="Texture2D" uid="uid://dgvm5n7fo7lri" path="res://art/bg menu ungu dikit.png" id="2_x40vo"]
[ext_resource type="Texture2D" uid="uid://dldgbpnwa1mat" path="res://art/win menu.png" id="3_6u2v6"]
[ext_resource type="Texture2D" uid="uid://ilpj2j7y16xr" path="res://art/win menu pressed.png" id="4_r16ci"]
[ext_resource type="Texture2D" uid="uid://cb5hjfydjqkjw" path="res://art/win menu hover.png" id="5_nabw0"]
[ext_resource type="AudioStream" uid="uid://1jk8pffbqqva" path="res://music/tunetank.com_menu-interface-selection.wav" id="6_42nx0"]
[ext_resource type="AudioStream" uid="uid://dnshtpdu7shek" path="res://music/daneben-105534_[cut_1sec].wav" id="6_f05y7"]

[node name="Option" type="Node2D"]
script = ExtResource("1_aejjl")

[node name="TextureRect" type="TextureRect" parent="."]
offset_left = -576.0
offset_top = -324.0
offset_right = 1344.0
offset_bottom = 756.0
scale = Vector2(0.6, 0.6)
texture = ExtResource("2_x40vo")

[node name="HSlider" type="HSlider" parent="."]
offset_left = -342.0
offset_top = -132.0
offset_right = 335.0
offset_bottom = -29.0
min_value = -50.0
max_value = 50.0

[node name="TextureButton" type="TextureButton" parent="."]
offset_left = -539.0
offset_top = -275.0
offset_right = 1613.0
offset_bottom = 241.0
scale = Vector2(0.211895, 0.211895)
texture_normal = ExtResource("3_6u2v6")
texture_pressed = ExtResource("4_r16ci")
texture_hover = ExtResource("5_nabw0")

[node name="Camera2D" type="Camera2D" parent="."]

[node name="Tunetank_comMenu-interface-selection" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_42nx0")
bus = &"sfx_bub"

[node name="Daneben-105534[cut1Sec]" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_f05y7")
bus = &"sfx_bub"

[node name="Daneben-105534[cut1Sec]2" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_f05y7")

[connection signal="value_changed" from="HSlider" to="." method="_on_h_slider_value_changed"]
[connection signal="mouse_entered" from="TextureButton" to="." method="_on_texture_button_mouse_entered"]
[connection signal="pressed" from="TextureButton" to="." method="_on_texture_button_pressed"]
